--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-post-form></app-post-form>
-<app-post-list></app-post-list>
+<main>
+  <app-post-form></app-post-form>
+  <app-post-list></app-post-list>
+</main>
